# harv

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  migrate-harjira-to-harv.sh
.claude/skills/: README.md  check-commits.md  debug-logs.md  install-timer.md  quick-check.md  release-build.md  run-tests.md  setup-dev.md  test-sync.md  validate-config.md
src/: config.rs  error.rs  git.rs  harvest.rs  jira.rs  lib.rs  main.rs  models.rs  prompt.rs  ticket_parser.rs  time_parser.rs  usage.rs
src/ai/: mod.rs
src/ai/providers/: anthropic.rs  openai.rs
systemd/: harjira.service  harjira.timer  harv.service  harv.timer
