[package]
name = "harv"
version = "0.1.0"
edition = "2021"
authors = ["Steven de Jong"]
description = "Smart Harvest time tracking with git commit integration and AI-powered time entry generation"

[dependencies]
# CLI & argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# HTTP client for APIs
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Git operations
git2 = "0.20"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# User prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# Logging
env_logger = "0.11"
log = "0.4"

# File system utilities
dirs = "6.0"

# Regex for ticket parsing
regex = "1.11"
lazy_static = "1.4"

[dev-dependencies]
mockito = "1.6"
tempfile = "3.10"
